feat: atualizacao do controlador Configuracoes