@@ -28,22 +28,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.1'
-
-	//implementation group: 'org.flywaydb', name: 'flyway-database-mongodb', version: '10.19.0'
-	//implementation files('libs/mongo-jdbc-standalone-1.19.jar')
-
-	//implementation("com.github.cloudyrock.mongock:mongock-bom:4.1.19")
-	//implementation("com.github.cloudyrock.mongock:mongock-spring-v5:4.1.19")
-	//implementation("com.github.cloudyrock.mongock:mongodb-springdata-v3-driver:4.1.19")
-
-	//implementation "io.mongock:mongock:5.0.32"
-	//compileOnly group: 'io.mongock', name: 'mongock-springboot', version: '5.4.4'
-	//testImplementation group: 'io.mongock', name: 'mongodb-springdata-v3-driver', version: '5.4.4'
-
 	implementation group: 'io.mongock', name: 'mongock-springboot-v3', version: '5.4.4'
 	implementation group: 'io.mongock', name: 'mongodb-springdata-v4-driver', version: '5.4.4'
-
-
+	implementation group: 'io.mongock', name: 'mongock-springboot-junit5', version: '5.5.0'
+	implementation('org.springframework.boot:spring-boot-starter-validation')
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
@@ -51,6 +39,8 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation group: 'org.testcontainers', name: 'testcontainers', version: '1.20.2'
+	testImplementation group: 'org.testcontainers', name: 'mongodb', version: '1.20.2'
 }
 
 dependencyManagement {
@@ -62,5 +52,9 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+test {
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
